# crypto-dashboard-data-pipeline

./: .gitignore  README.md
etl-pipeline/: Dockerfile  crypto_data.db  main-deployment.yaml  pyproject.toml  run_all.py  run_etl.sh  setup_aws_creds.py
etl-pipeline/etl_pipeline/: extract_load.py  main.py  test_rds_connection.py  transform.py
etl-pipeline/tests/: test_extract_load_data.py  test_transform_data.py
etl-pipeline/web_app/: .flaskenv  app.py
etl-pipeline/web_app/templates/: index.html
