[tool.poetry]
name = "etl-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
numpy = "1.23.5"
pydantic = "1.10.9"
prefect = "^2.10.0"
python-dotenv = "^0.19.0"
boto3 = "^1.26.0"
psycopg2-binary = "^2.9.3"
prefect-aws = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"


[tool.poetry.scripts]
main = "etl_pipeline.main:main"